Fix pivot reports with transactions in closed accounts

The calculation of the balance of closed accounts when they need to be
included in a pivot report did not work properly. This change fixes the
problem and provides a test case for the scenario.

BUG: 511553
FIXED-IN: 5.2.2